--- a/ui.html
+++ b/ui.html
@@ -2,6 +2,7 @@
 <p>Count: <input id="count" value="5"></p>
 <button id="create">Create</button>
 <button id="cancel">Cancel</button>
+<p>test</p>
 <script>
 
 document.getElementById('create').onclick = () => {
