--- a/layout.html
+++ b/layout.html
@@ -25,10 +25,14 @@
   <body>
     <h2>Task Manager</h2>
     <div class="title">
-        <p>To-Do</p>
-        <p class="todo"></p>
-        <p>Completed</p>
-        <p class="done"></p>
+        <div class="title-child active">
+            <p>To-Do</p>
+            <p class="todo"></p>
+        </div>
+        <div class="title-child">
+            <p>Completed</p>
+            <p class="done"></p>
+        </div>
     </div>
     <button id="create">Add New Task</button>
     <button id="delete">Delete Task</button>
