--- a/layout.html
+++ b/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JT Portflio</title>
+    <title>figma plugin test</title>
     <!-- <link rel="stylesheet" type="text/css" href="source/Bootstrap/bootstrap.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -27,11 +27,11 @@
     <div class="title">
         <div class="title-child active">
             <p>To-Do</p>
-            <p class="todo"></p>
+            <p class="todo">0</p>
         </div>
         <div class="title-child">
             <p>Completed</p>
-            <p class="done"></p>
+            <p class="done">2</p>
         </div>
     </div>
     <button id="create">Add New Task</button>
