--- a/layout.html
+++ b/layout.html
@@ -24,18 +24,23 @@
   </head>
   <body>
     <h2>Task Manager</h2>
-    <div class="title">
-        <div class="title-child active">
-            <p>To-Do</p>
-            <p class="todo">0</p>
+    <div class="box">
+        <div class="title">
+            <div class="title-child active">
+                <p>To-Do</p>
+                <p class="todo">0</p>
+            </div>
+            <div class="title-child">
+                <p>Completed</p>
+                <p class="done">2</p>
+            </div>
         </div>
-        <div class="title-child">
-            <p>Completed</p>
-            <p class="done">2</p>
-        </div>
+        <form action="create">
+            <input type="text" id="create" placeholder="+ Add New Task">
+        </form>
+        <!-- <button id="create">Add New Task</button> -->
+        <!-- <button id="delete">Delete Task</button> -->
     </div>
-    <button id="create">Add New Task</button>
-    <button id="delete">Delete Task</button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
@@ -46,9 +51,9 @@
             }
         }
     
-        document.getElementById('delete').onclick = () => {
-            parent.postMessage({ pluginMessage: { type: 'delete' } }, '*')
-        }
+        // document.getElementById('delete').onclick = () => {
+        //     parent.postMessage({ pluginMessage: { type: 'delete' } }, '*')
+        // }
     </script>  
 </body>
 </html>
