--- a/layout.html
+++ b/layout.html
@@ -26,11 +26,11 @@
     <h2>Task Manager</h2>
     <div class="box">
         <div class="title">
-            <div class="title-child active">
+            <div id="list" class="title-child active">
                 <p>To-Do</p>
                 <p class="todo">0</p>
             </div>
-            <div class="title-child">
+            <div id="completed" class="title-child">
                 <p>Completed</p>
                 <p class="done">2</p>
             </div>
@@ -44,6 +44,15 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
+        document.getElementById('completed').onclick = () => {
+            $('#list').removeClass('active');
+            $('#completed').addClass('active');
+        }
+        document.getElementById('list').onclick = () => {
+            $('#list').addClass('active');
+            $('#completed').removeClass('active');
+        }
+
         document.getElementById('create').onclick = () => {
             parent.postMessage({ pluginMessage: { type: 'create task' } }, '*')
             onmessage = (event) => {
