--- a/layout.html
+++ b/layout.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <form action="create" id="form">
-            <input type="text" class="create" placeholder="+ Add New Task"  oninput="typed()">
+            <input type="text" class="task 0" placeholder="+ Add New Task"  oninput="typed(0)">
         </form>
         <!-- <button id="create">Add New Task</button> -->
         <!-- <button id="delete">Delete Task</button> -->
@@ -44,14 +44,25 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
-        function typed() {
-            let input = document.querySelectorAll('.create:last-child')[0];
+        count = 0;
+        function typed(update) {
+            let size = document.querySelectorAll('.task').length;
+            let input = document.querySelectorAll('.task')[size-1];
+            
             if (input.value != '') {
+                let close = document.createElement('button');
+                let attr = 'btn btn-primary delete ' + update;
+                close.setAttribute('class', attr);
+                close.setAttribute("type", 'button');
+                close.innerHTML = 'x';
+                document.getElementById('form').appendChild(close);
+
+                count += 1;
                 let newInput = document.createElement('input');
                 newInput.setAttribute('type',"text");
-                newInput.setAttribute('class',"create");
+                newInput.setAttribute('class',"task "+count);
                 newInput.setAttribute('placeholder',"+ Add New Task");
-                newInput.setAttribute('oninput',"typed()");
+                newInput.setAttribute('oninput',"typed(" + count + ")");
 
                 document.getElementById('form').appendChild(newInput);
             }
