--- a/layout.html
+++ b/layout.html
@@ -100,15 +100,15 @@
             let entry = place.value;
             let done = document.createElement('input');
             done.setAttribute('type',"text");
-            done.setAttribute('class',"task "+place);
-            done.setAttribute('value',entry);
+            done.setAttribute('class',"task "+ index);
+            done.setAttribute('value', entry);
             done.setAttribute('oninput',"typed(" + place + ")");
             document.getElementById('done').appendChild(done);
             let open = document.createElement('button');
-            let attr = 'btn btn-primary reopen ' + place;
+            let attr = 'btn btn-primary reopen ' + index;
             open.setAttribute('class', attr);
             open.setAttribute("type", 'button');
-            // open.setAttribute("onclick", 'reopen('+ place +')');
+            open.setAttribute("onclick", 'reopen('+ index +')');
             open.innerHTML = 'x';
             document.getElementById('done').appendChild(open);
 
@@ -116,6 +116,41 @@
             place.remove();
             btn.remove();
 
+            var doneCount = document.getElementById('done').getElementsByTagName('input').length;
+            document.getElementById('doneCount').innerHTML = doneCount;
+            var doneCount = document.getElementById('form').getElementsByTagName('input').length;
+            document.getElementById('todoCount').innerHTML = doneCount - 1;
+        }
+
+        function reopen(index) {
+            let tasklist = document.getElementById('done').getElementsByTagName('input');
+            let tasklistbtn = document.getElementById('done').getElementsByTagName('button');
+
+            for(let i=0; i<tasklist.length; i++) {
+                let value = tasklist[i].classList[1];
+                if (value == index) {
+                    var place = tasklist[i];
+                    var btn = tasklistbtn[i]
+                }
+            }
+
+            let entry = place.value;
+            let reopenbtn = document.createElement('button');
+            let attr = 'btn btn-primary reopen ' + index;
+            reopenbtn.setAttribute('class', attr);
+            reopenbtn.setAttribute("type", 'button');
+            reopenbtn.setAttribute("onclick", 'finished('+ index +')');
+            reopenbtn.innerHTML = 'x';
+            document.getElementById('form').prepend(reopenbtn);
+            let reopen = document.createElement('input');
+            reopen.setAttribute('type',"text");
+            reopen.setAttribute('class',"task "+ index);
+            reopen.setAttribute('value', entry);
+            document.getElementById('form').prepend(reopen);
+          
+
+            place.remove();
+            btn.remove();
             var doneCount = document.getElementById('done').getElementsByTagName('input').length;
             document.getElementById('doneCount').innerHTML = doneCount;
             var doneCount = document.getElementById('form').getElementsByTagName('input').length;
