--- a/layout.html
+++ b/layout.html
@@ -37,10 +37,12 @@
         </div>
         <form action="create" id="form">
             <ul id="openTasks">
-                <li><input type="text" class="task 0"  placeholder="+ Add New Task"  oninput="typed(0)"></li>
+                <input type="text" class="task 0"  placeholder="+ Add New Task"  oninput="typed(0)">
             </ul>
         </form>
-        <form action="display" id="done"></form>
+        <form action="display" id="done">
+            <ul id="doneTasks"></ul>
+        </form>
 
         <!-- <input type="text" id="field1">
         <button onclick="setCookie()">Save Data</button> -->
@@ -70,37 +72,46 @@
         }
 
         function doneTask(index, place, entry) {
+            let draggable = document.createElement('li')
+            draggable.setAttribute('id', index);
             let done = document.createElement('input');
             done.setAttribute('type',"text");
             done.setAttribute('class',"task "+ index);
             done.setAttribute('draggable', true);
             done.setAttribute('value', entry);
             done.setAttribute('oninput',"typed(" + place + ")");
-            document.getElementById('done').appendChild(done);
-
+            // document.getElementById('done').appendChild(done);
             let open = document.createElement('button');
             let attr = 'btn btn-primary reopen ' + index;
             open.setAttribute('class', attr);
             open.setAttribute("type", 'button');
             open.setAttribute("onclick", 'reopen('+ index +')');
             open.innerHTML = 'x';
-            document.getElementById('done').appendChild(open);
+            draggable.appendChild(done);
+            draggable.appendChild(open);
+            // document.getElementById('done').appendChild(open);
+            document.getElementById('doneTasks').appendChild(draggable);
         }
 
         function reopenTask(index, entry) {
+            let draggable = document.createElement('li')
+            draggable.setAttribute('id', index);
             let reopenbtn = document.createElement('button');
             let attr = 'btn btn-primary reopen ' + index;
             reopenbtn.setAttribute('class', attr);
             reopenbtn.setAttribute("type", 'button');
             reopenbtn.setAttribute("onclick", 'finished('+ index +')');
             reopenbtn.innerHTML = 'x';
-            document.getElementById('form').prepend(reopenbtn);
+            // document.getElementById('form').prepend(reopenbtn);
             let reopen = document.createElement('input');
             reopen.setAttribute('type',"text");
             reopen.setAttribute('class',"task "+ index);
             reopen.setAttribute('draggable', true);
             reopen.setAttribute('value', entry);
-            document.getElementById('form').prepend(reopen);
+            // document.getElementById('form').prepend(reopen);
+            draggable.appendChild(reopen);
+            draggable.appendChild(reopenbtn);
+            document.getElementById('openTasks').appendChild(draggable);
         }
 
         function typed(update) {
@@ -132,14 +143,16 @@
         }
 
         function finished(index) {
-            let tasklist = document.getElementById('form').getElementsByTagName('input');
-            let tasklistbtn = document.getElementById('form').getElementsByTagName('button');
+            let tasklist = document.getElementById('openTasks').getElementsByTagName('input');
+            let tasklistbtn = document.getElementById('openTasks').getElementsByTagName('button');
+            let taskrow = document.getElementById('openTasks').getElementsByTagName('li');
 
             for(let i=0; i<tasklist.length; i++) {
                 let value = tasklist[i].classList[1];
                 if (value == index) {
                     var place = tasklist[i];
-                    var btn = tasklistbtn[i]
+                    var btn = tasklistbtn[i];
+                    var spot = taskrow[i];
                 }
             }
 
@@ -148,22 +161,25 @@
 
             place.remove();
             btn.remove();
+            spot.remove();
 
-            var doneCount = document.getElementById('done').getElementsByTagName('input').length;
+            var doneCount = document.getElementById('doneTasks').getElementsByTagName('input').length;
             document.getElementById('doneCount').innerHTML = doneCount;
-            var doneCount = document.getElementById('form').getElementsByTagName('input').length;
+            var doneCount = document.getElementById('openTasks').getElementsByTagName('input').length;
             document.getElementById('todoCount').innerHTML = doneCount - 1;
         }
 
         function reopen(index) {
-            let tasklist = document.getElementById('done').getElementsByTagName('input');
-            let tasklistbtn = document.getElementById('done').getElementsByTagName('button');
+            let tasklist = document.getElementById('doneTasks').getElementsByTagName('input');
+            let tasklistbtn = document.getElementById('doneTasks').getElementsByTagName('button');
+            let taskrow = document.getElementById('doneTasks').getElementsByTagName('li');
 
             for(let i=0; i<tasklist.length; i++) {
                 let value = tasklist[i].classList[1];
                 if (value == index) {
                     var place = tasklist[i];
-                    var btn = tasklistbtn[i]
+                    var btn = tasklistbtn[i];
+                    var spot = taskrow[i];
                 }
             }
 
@@ -173,9 +189,10 @@
 
             place.remove();
             btn.remove();
-            var doneCount = document.getElementById('done').getElementsByTagName('input').length;
+            spot.remove();
+            var doneCount = document.getElementById('doneTasks').getElementsByTagName('input').length;
             document.getElementById('doneCount').innerHTML = doneCount;
-            var doneCount = document.getElementById('form').getElementsByTagName('input').length;
+            var doneCount = document.getElementById('openTasks').getElementsByTagName('input').length;
             document.getElementById('todoCount').innerHTML = doneCount - 1;
         }
 
