--- a/layout.html
+++ b/layout.html
@@ -72,12 +72,13 @@
         }
 
         function doneTask(index, place, entry) {
-            let draggable = document.createElement('li')
+            let draggable = document.createElement('li');
             draggable.setAttribute('id', index);
+            draggable.setAttribute('class', 'dropzone');
+            draggable.setAttribute('draggable', true);
             let done = document.createElement('input');
             done.setAttribute('type',"text");
             done.setAttribute('class',"task "+ index);
-            done.setAttribute('draggable', true);
             done.setAttribute('value', entry);
             done.setAttribute('oninput',"typed(" + place + ")");
             // document.getElementById('done').appendChild(done);
@@ -94,8 +95,10 @@
         }
 
         function reopenTask(index, entry) {
-            let draggable = document.createElement('li')
+            let draggable = document.createElement('li');
             draggable.setAttribute('id', index);
+            draggable.setAttribute('class', 'dropzone');
+            draggable.setAttribute('draggable', true);
             let reopenbtn = document.createElement('button');
             let attr = 'btn btn-primary reopen ' + index;
             reopenbtn.setAttribute('class', attr);
@@ -106,7 +109,6 @@
             let reopen = document.createElement('input');
             reopen.setAttribute('type',"text");
             reopen.setAttribute('class',"task "+ index);
-            reopen.setAttribute('draggable', true);
             reopen.setAttribute('value', entry);
             // document.getElementById('form').prepend(reopen);
             draggable.appendChild(reopen);
@@ -119,8 +121,10 @@
             let input = document.querySelectorAll('.task')[size-1];
             
             if (input.value != '') {
-                let draggable = document.createElement('li')
+                let draggable = document.createElement('li');
                 draggable.setAttribute('id', update);
+                draggable.setAttribute('class', 'dropzone');
+                draggable.setAttribute('draggable', true);
                 let close = document.createElement('button');
                 let attr = 'btn btn-primary delete ' + update;
                 close.setAttribute('class', attr);
@@ -208,6 +212,44 @@
             $('#completed').removeClass('active');
             $('#done').hide();
         }
+
+        let dragged;
+        let id;
+        let index;
+        let indexDrop;
+        let list;
+
+        document.addEventListener("dragstart", ({target}) => {
+            dragged = target;
+            id = target.id;
+            list = target.parentNode.children;
+            for(let i = 0; i < list.length; i += 1) {
+                if(list[i] === dragged){
+                index = i;
+                }
+            }
+        });
+
+        document.addEventListener("dragover", (event) => {
+            event.preventDefault();
+        });
+
+        document.addEventListener("drop", ({target}) => {
+        if(target.className == "dropzone" && target.id !== id) {
+            dragged.remove( dragged );
+            for(let i = 0; i < list.length; i += 1) {
+                if(list[i] === target){
+                indexDrop = i;
+                }
+            }
+            // console.log(index, indexDrop);
+            if(index > indexDrop) {
+                target.before( dragged );
+            } else {
+            target.after( dragged );
+            }
+            }
+        });
     </script>  
 </body>
 </html>
