--- a/layout.html
+++ b/layout.html
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -82,12 +83,17 @@
             done.setAttribute('value', entry);
             done.setAttribute('oninput',"typed(" + place + ")");
             document.getElementById('done').appendChild(done);
-            let open = document.createElement('button');
-            let attr = 'btn btn-primary reopen ' + index;
+            // let open = document.createElement('button');
+            // let attr = 'btn btn-primary reopen ' + index;
+            // open.setAttribute('class', attr);
+            // open.setAttribute("type", 'button');
+            // open.setAttribute("onclick", 'reopen('+ index +')');
+            // open.innerHTML = 'x';
+            let open = document.createElement('input')
+            let attr = 'form-check-input reopen' + index;
             open.setAttribute('class', attr);
-            open.setAttribute("type", 'button');
+            open.setAttribute("type", 'checkbox');
             open.setAttribute("onclick", 'reopen('+ index +')');
-            open.innerHTML = 'x';
             // draggable.appendChild(done);
             // draggable.appendChild(open);
             document.getElementById('done').appendChild(open);
@@ -99,12 +105,17 @@
             draggable.setAttribute('id', index);
             draggable.setAttribute('class', 'dropzone');
             draggable.setAttribute('draggable', true);
-            let reopenbtn = document.createElement('button');
-            let attr = 'btn btn-primary reopen ' + index;
+            // let reopenbtn = document.createElement('button');
+            // let attr = 'btn btn-primary reopen ' + index;
+            // reopenbtn.setAttribute('class', attr);
+            // reopenbtn.setAttribute("type", 'button');
+            // reopenbtn.setAttribute("onclick", 'finished('+ index +')');
+            // reopenbtn.innerHTML = 'x';
+            let reopenbtn = document.createElement('input')
+            let attr = 'form-check-input reopen' + index;
             reopenbtn.setAttribute('class', attr);
-            reopenbtn.setAttribute("type", 'button');
-            reopenbtn.setAttribute("onclick", 'finished('+ index +')');
-            reopenbtn.innerHTML = 'x';
+            reopenbtn.setAttribute("type", 'checkbox');
+            reopenbtn.setAttribute("onclick", 'reopen('+ index +')');
             // document.getElementById('form').prepend(reopenbtn);
             let reopen = document.createElement('input');
             reopen.setAttribute('type',"text");
@@ -125,12 +136,18 @@
                 draggable.setAttribute('id', update);
                 draggable.setAttribute('class', 'dropzone');
                 draggable.setAttribute('draggable', true);
-                let close = document.createElement('button');
-                let attr = 'btn btn-primary delete ' + update;
+                // let close = document.createElement('button');
+                // let attr = 'btn btn-primary delete ' + update;
+                // close.setAttribute('class', attr);
+                // close.setAttribute("type", 'button');
+                // close.setAttribute("onclick", 'finished('+ update +')');
+                // close.innerHTML = 'x';
+                let close = document.createElement('input')
+                let attr = 'form-check-input reopen' + index;
                 close.setAttribute('class', attr);
-                close.setAttribute("type", 'button');
-                close.setAttribute("onclick", 'finished('+ update +')');
-                close.innerHTML = 'x';
+                close.setAttribute("type", 'checkbox');
+                close.setAttribute("onclick", 'reopen('+ index +')');
+
                 draggable.appendChild(input);
                 draggable.appendChild(close);
                 document.getElementById('openTasks').appendChild(draggable);
