--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="source/Bootstrap/bootstrap.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="compiled/css/ui.css">
+    <!-- <link rel="stylesheet" href="compiled/css/ui.css"> -->
     <!-- font awesome stuff -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
@@ -22,6 +22,10 @@
 
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <style>
+        .box{max-width:80%;padding:10%}.title{display:flex;flex-direction:row;justify-content:space-around}.title .title-child{max-width:300px;margin:50px;display:flex;flex-direction:row;align-items:baseline;font-size:24px;color:gray;justify-content:center}.title .title-child p{margin:20px}.title .title-child .todo{padding:0px 7px;background-color:#add8e6;border-radius:50px}.active{border-bottom:1px blue solid;color:#a9a9a9}#form{display:flex;flex-wrap:wrap;width:100%;padding:0 5%}#form input::placeholder{padding-left:15px}ul{list-style:none;min-width:100%}input{flex:90%;width:90%}input:focus::placeholder{color:rgba(0,0,0,0)}#done{text-decoration:line-through}.btn{margin-left:15px}/*# sourceMappingURL=ui.css.map */
+    </style>
   </head>
   <body>
     <h2>Task Manager</h2>
@@ -60,7 +64,7 @@
         var doneCount = document.getElementById('openTasks').getElementsByTagName('li').length;
         document.getElementById('todoCount').innerHTML = doneCount;
 
-        count = 0;
+        var count = 0;
         function newTask(index) {
             let newInput = document.createElement('input');
             newInput.setAttribute('type',"text");
